# Graphics-Engine

./: .gitignore  CMakeLists.txt
engine/: CMakeLists.txt
engine/core/: CMakeLists.txt
engine/core/camera/: Camera.cc  Camera.h
engine/core/dirLight/: DirLight.cc  DirLight.h
engine/core/graphicsNode/: GraphicsNode.cc  GraphicsNode.h
engine/core/inputHandler/: InputHandler.h
engine/core/lightManager/: LightManager.cc  LightManager.h
engine/core/material/: Material.h
engine/core/material/blinnPhongMaterial/: BlinnPhongMaterial.cc  BlinnPhongMaterial.h
engine/core/material/defaultMaterial/: DefaultMaterial.cc  DefaultMaterial.h
engine/core/mathlib/: mat4.h  vec3.h  vec4.h
engine/core/meshResource/: MeshResource.cc  MeshResource.h
engine/core/pointLight/: PointLight.cc  PointLight.h
engine/core/shaderResource/: ShaderResource.cc  ShaderResource.h
engine/core/textureResource/: TextureResource.cc  TextureResource.h
projects/DeferredShading/: CMakeLists.txt
projects/DeferredShading/code/: DeferredShading.cc  DeferredShading.h  main.cc
projects/GLTFNormalMap/: CMakeLists.txt
projects/GLTFNormalMap/code/: GLTFNormalMap.cc  GLTFNormalMap.h  main.cc
projects/MeshResource/code/: meshResourceApp.cc  meshResourceApp.h
projects/OBJLoaderLighting/: CMakeLists.txt
projects/OBJLoaderLighting/code/: exampleapp.cc  exampleapp.h
projects/dev_env_setup/: CMakeLists.txt
projects/meshResource/: CMakeLists.txt
projects/meshResource/code/: exampleapp.cc  exampleapp.h  main.cc
projects/shadersGraphicsNodesInput/: CMakeLists.txt
projects/shadersGraphicsNodesInput/code/: exampleapp.cc  exampleapp.h  main.cc
projects/textureAndCamera/: CMakeLists.txt
projects/textureAndCamera/code/: exampleapp.cc  exampleapp.h  main.cc
resources/: sources.txt
resources/shaders/: FragmentShader.txt
